# rhizome

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  alembic.ini  braindump.md  pyproject.toml
curriculum_app/: CONTEXT.md  config.py
curriculum_app/agent/: CONTEXT.md  __init__.py  agent.py  config.py  runner.py  tools.py
curriculum_app/db/: CONTEXT.md  __init__.py  models.py
curriculum_app/tools/: CONTEXT.md  __init__.py  entries.py  (+4 more)
docs/: agent-workflows.md  architecture.md  learn.md  mvvm-architecture-proposal.md  review.md  schema-proposal.md  tui-implementation-plan.md  tui-learn-mode.md  tui-open-questions.md  tui-options-mode.md  tui-overarching-plan.md  tui-review-mode.md  work-report-schema-implementation.md
examples/: exercise_subagent.py  exercise_tools.py  seed_sample_db.py  sqlite-quick-reference.md
migrations/: 001_add_review_session_plan.py  002_flashcard_session_set_null.py
rhizome/: CONTEXT.md  config.py  credentials.py  logs.py
rhizome-rs/: .gitignore  AGENTS.md  Cargo.toml
rhizome-rs/migrations/: 20260417001_initial_schema.sql  20260417002_review_system.sql  20260417003_resources.sql
rhizome-rs/src/: config.rs  main.rs
rhizome-rs/src/agent/: client.rs  mod.rs  tools.rs  types.rs
rhizome-rs/src/db/: entries.rs  explorer.rs  mod.rs  models.rs  relations.rs  resources.rs  tags.rs  topics.rs
rhizome-rs/src/tui/: app.rs  chat.rs  command.rs  commands.rs  event.rs  explorer.rs  focus.rs  input.rs  input_history.rs  mod.rs  palette.rs  state.rs  status.rs  tab.rs  theme.rs
rhizome-rs/src/tui/draw/: chat.rs  command.rs  explorer.rs  input.rs  mod.rs  popup.rs  sidebar.rs  spinner.rs  status.rs  tab_bar.rs
scripts/: generate_schema_diagram.py
(+170 files in other folders)
