[project]
name = "rhizome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.20.0",
    "rich>=14.3.2",
    "rich-click>=1.9.7",
    "sqlalchemy[asyncio]>=2.0",
    "textual[syntax]>=7.5.0",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langgraph>=0.4",
    "langchain-anthropic>=0.3",
    "langchain-text-splitters>=1.1.1",
    "langchain-voyageai>=0.3.3",
    "langchain-community>=0.4.1",
    "pypdf>=6.9.2",
    "faiss-cpu>=1.13.2",
]

[dependency-groups]
dev = [
    "eralchemy2>=1.4.1",
]
