[package]
name = "rhizome"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
crossterm = "0.28"
dirs = "6"
futures = "0.3.32"
itertools = "0.14.0"
ratatui = "0.29"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio", "sqlite"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tui-textarea = "0.7"
